force-app/main/default/objects/ForceGuard_Test_Complete__e/ForceGuard_Test_Complete__e.object-meta.xml
<CustomObject>
    <label>ForceGuard Test Complete</label>
    <pluralLabel>ForceGuard Test Complete Events</pluralLabel>
</CustomObject>