force-app/main/default/objects/ForceGuard_Test_Complete__e/fields/Suite_Name__c.field-meta.xml
<CustomField>
    <fullName>Suite_Name__c</fullName>
    <label>Suite Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>