force-app/main/default/objects/ForceGuard_Test_Complete__e/fields/Test_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Run_Id__c</fullName>
    <label>Test Run Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>